--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "prestart": "node buildScripts/startMessage.js",
-    "start" : "npm-run-all --parallel security-check open:src",
-    "open:src": "node buildScripts/srcServer.js",
+    "prestart": "babel-node buildScripts/startMessage.js",
+    "start": "npm-run-all --parallel security-check open:src",
+    "open:src": "babel-node buildScripts/srcServer.js",
     "security-check": "nsp check",
-    "localtunnel" : "lt --port 3000",
-    "share" : "npm-run-all --parallel open:src localtunnel"
+    "localtunnel": "lt --port 3000 --subdomain zybroxz",
+    "share": "npm-run-all --parallel open:src localtunnel"
   },
   "author": "zybroxz",
   "license": "ISC",
